tests/errors/block_argument_type_mismatch.dang
# Test lambda argument type mismatch
[1, 2, 3].map { x => "not a number" + x }
